--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
             <link rel="stylesheet" href="../assets/css/main.css">
         </head>
         <body  id="top">
-            
+
 			    <!-- Banner -->
 			    <!--
 				    To use a video as your background, set data-video to the name of your video without
@@ -24,5 +24,23 @@
                         </header>
                     </div>
                 </section>
+                <div>
+                  <a href="./views/released.html" class="button fit">Enter</a>
+                </div>
+                <!-- Footer -->
+                <footer id="footer">
+                    <div class="inner">
+                        <h2>Etiam veroeros lorem</h2>
+                        <p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
+
+                        <ul class="icons">
+                            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
+                            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+                            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
+                            <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
+                        </ul>
+                        <p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
+                    </div>
+                </footer>
         </body>
-    </html>    
+    </html>
