--- a/index.html
+++ b/index.html
@@ -1,46 +1,21 @@
 <!DOCTYPE HTML>
-    <html>
-        <head>
-            <meta charset="UTF-8">
-            <meta http-equiv="X-UA-Compatible" content="IE=edge">
-            <meta name="viewport" content="width=device-width, initial-scale=1.0">
-            <title>Coming Soon</title>
-            <link rel="stylesheet" href="../assets/css/main.css">
-        </head>
-        <body  id="top">
+  <html>
+    <head>
 
-			    <!-- Banner -->
-			    <!--
-				    To use a video as your background, set data-video to the name of your video without
-				    its extension (eg. images/banner). Your video must be available in both .mp4 and .webm
-				    formats to work correctly.
-			    -->
-                <section id="banner" data-video="images/banner">
-                    <div class="inner">
-                        <header>
-                            <h1>Coming Soon</h1>
-                            <p>This Website hasn't been released yet please come back later<br />
-                            designed by <a href="https://templated.co/">Templated</a> and released under the Creative Commons License.</p>
-                        </header>
-                    </div>
-                </section>
-                <div>
-                  <a href="./views/released.html" class="button fit">Enter</a>
-                </div>
-                <!-- Footer -->
-                <footer id="footer">
-                    <div class="inner">
-                        <h2>Etiam veroeros lorem</h2>
-                        <p>Pellentesque eleifend malesuada efficitur. Curabitur volutpat dui mi, ac imperdiet dolor tincidunt nec. Ut erat lectus, dictum sit amet lectus a, aliquet rutrum mauris. Etiam nec lectus hendrerit, consectetur risus viverra, iaculis orci. Phasellus eu nibh ut mi luctus auctor. Donec sit amet dolor in diam feugiat venenatis. </p>
-
-                        <ul class="icons">
-                            <li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
-                            <li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-                            <li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
-                            <li><a href="#" class="icon fa-envelope"><span class="label">Email</span></a></li>
-                        </ul>
-                        <p class="copyright">&copy; Untitled. Design: <a href="https://templated.co">TEMPLATED</a>. Images: <a href="https://unsplash.com/">Unsplash</a>. Videos: <a href="http://coverr.co/">Coverr</a>.</p>
-                    </div>
-                </footer>
-        </body>
-    </html>
+    </head>
+    <body>
+      <div class="bgimg">
+        <div class="topleft">
+          <p>Logo</p>
+        </div>
+        <div class="middle">
+          <h1>COMING SOON</h1>
+          <hr>
+          <p>35 days</p>
+        </div>
+        <div class="bottomleft">
+          <p>Some text</p>
+        </div>
+      </div>
+    </body>
+  </html>
