--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 
     </head>
     <body>
-      <div class="bgimg">
+      <div id="banner" data-video="images/banner">
         <div class="topleft">
           <p>Logo</p>
         </div>
